Inital Backend Setup

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://offsusangautam:bDA6JkHzPwmhxeKz@cluster0.6brat7v.mongodb.net/products?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://offsusangautam:bDA6JkHzPwmhxeKz@cluster0.6brat7v.mongodb.net/products?retryWrites=true&w=majority
+PORT = 5000
