--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ PORT = 5000
 JWT_SECRET=10c25c1ec5e68b660092bdca7e9a2039e264198759a692cd97
 c84ed5bcec8dd4979ccec1f494f1433bbf922133af4992ca59
 f8b3bfafadbc13e01bced565b379
+VITE_API_BASE=http://localhost:5000
